Showing username in drawer Fixed crash due to moving resources (on Util class) Removed unused code leftovers

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="drawer_all_news">All</string>
     <string name="drawer_account">Account</string>
     <string name="drawer_log_out">Log out</string>
+    <string name="unknown_game_name">Unknown</string>
 
 
 </resources>
